// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tasty() API should allow multiple wrapping 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0.c0 {
  position: static;
}

.c0.c0 {
  padding-top: calc(2 * var(--gap));
}

.c0.c0 {
  border: var(--border-width) solid var(--black-color);
}

.c0.c0 {
  color: var(--white-color,rgba(0,0,0,1));
  --current-color: var(--white-color,white);
  --current-color-rgb: var(--white-color-rgb);
}

.c0.c0 {
  display: flex;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`tasty() API should be able to override styles 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0.c0 {
  color: rgba(var(--black-color-rgb),0.1);
  --current-color: var(--black-color,black);
  --current-color-rgb: var(--black-color-rgb);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`tasty() API should create element styles 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0 [data-element="Element"] {
  outline: none;
}

.c0 [data-element="Element"][hidden] {
  display: none !important;
}

.c0.c0:not([data-is-modified]) [data-element="Element"] {
  color: var(--dark-color);
  --current-color: var(--dark-color,dark);
  --current-color-rgb: var(--dark-color-rgb);
}

.c0.c0[data-is-modified] [data-element="Element"] {
  color: var(--purple-color,rgba(0,0,0,1));
  --current-color: var(--purple-color,purple);
  --current-color-rgb: var(--purple-color-rgb);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`tasty() API should create responsive styles 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

@media (min-width:980px) {
  .c0.c0 {
    display: grid;
  }
}

@media (max-width:979px) {
  .c0.c0 {
    display: flex;
  }
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`tasty() API should define style props 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0.c0 {
  border: var(--border-width) solid var(--border-color);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`tasty() API should merge element styles 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0 [data-element="Element"] {
  outline: none;
}

.c0 [data-element="Element"][hidden] {
  display: none !important;
}

.c0.c0:not([data-is-modified]) [data-element="Element"] {
  color: var(--dark-color);
  --current-color: var(--dark-color,dark);
  --current-color-rgb: var(--dark-color-rgb);
}

.c0.c0[data-is-modified] [data-element="Element"] {
  color: var(--purple-color,rgba(0,0,0,1));
  --current-color: var(--purple-color,purple);
  --current-color-rgb: var(--purple-color-rgb);
}

.c0.c0 [data-element="Element"] {
  background-color: var(--black-color);
}

.c0.c0 [data-element="Element"]>* {
  --context-fill-color: var(--black-color);
  --context-fill-color-rgb: var(--black-color-rgb);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`tasty() API should merge styles 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0.c0:not([data-is-modified]) {
  color: var(--dark-color);
  --current-color: var(--dark-color,dark);
  --current-color-rgb: var(--dark-color-rgb);
}

.c0.c0[data-is-modified] {
  color: var(--purple-color,rgba(0,0,0,1));
  --current-color: var(--purple-color,purple);
  --current-color-rgb: var(--purple-color-rgb);
}

.c0.c0 {
  background-color: var(--black-color);
}

.c0.c0>* {
  --context-fill-color: var(--black-color);
  --context-fill-color-rgb: var(--black-color-rgb);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`tasty() API should merge styles in custom prop 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`tasty() API should not loose border-radius 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0.c0:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-variant="processing"]:not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-variant="processing"]:not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-variant="processing"][data-theme="ocean"]:not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--ocean-highlight-color,rgba(0,0,0,1));
}

.c0.c0[data-variant="processing"][data-theme="ocean"]:not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--ocean-highlight-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--ocean-highlight-color-rgb);
}

.c0.c0[data-variant="processing"][data-theme="ocean"][data-is-hover]:not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--ocean-highlight-hover-color,rgba(0,0,0,1));
}

.c0.c0[data-variant="processing"][data-theme="ocean"][data-is-hover]:not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--ocean-highlight-hover-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--ocean-highlight-hover-color-rgb);
}

.c0.c0[data-variant="processing"][data-is-hover]:not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-variant="processing"][data-is-hover]:not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-variant="processing"][data-is-hover][data-theme="pink"]:not([data-theme="ocean"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--pink-highlight-hover-color,rgba(0,0,0,1));
}

.c0.c0[data-variant="processing"][data-is-hover][data-theme="pink"]:not([data-theme="ocean"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--pink-highlight-hover-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--pink-highlight-hover-color-rgb);
}

.c0.c0[data-variant="processing"][data-is-hover][data-theme="green"]:not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--green-highlight-hover-color,rgba(0,0,0,1));
}

.c0.c0[data-variant="processing"][data-is-hover][data-theme="green"]:not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--green-highlight-hover-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--green-highlight-hover-color-rgb);
}

.c0.c0[data-variant="processing"][data-is-hover][data-theme="purple"]:not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-variant="waiting"]) {
  background-color: var(--purple-highlight-hover-color,rgba(0,0,0,1));
}

.c0.c0[data-variant="processing"][data-is-hover][data-theme="purple"]:not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-highlight-hover-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-highlight-hover-color-rgb);
}

.c0.c0[data-variant="processing"][data-theme="pink"]:not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--pink-highlight-color,rgba(0,0,0,1));
}

.c0.c0[data-variant="processing"][data-theme="pink"]:not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--pink-highlight-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--pink-highlight-color-rgb);
}

.c0.c0[data-variant="processing"][data-theme="green"]:not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--green-highlight-color,rgba(0,0,0,1));
}

.c0.c0[data-variant="processing"][data-theme="green"]:not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--green-highlight-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--green-highlight-color-rgb);
}

.c0.c0[data-variant="processing"][data-theme="purple"]:not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-variant="waiting"]) {
  background-color: var(--purple-highlight-color,rgba(0,0,0,1));
}

.c0.c0[data-variant="processing"][data-theme="purple"]:not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-highlight-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-highlight-color-rgb);
}

.c0.c0[data-theme="ocean"]:not([data-variant="processing"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-theme="ocean"]:not([data-variant="processing"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-theme="ocean"][data-is-hover]:not([data-variant="processing"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-theme="ocean"][data-is-hover]:not([data-variant="processing"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-theme="ocean"][data-is-hover][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]) {
  background-color: rgba(var(--purple-04-color-rgb),0.1);
}

.c0.c0[data-theme="ocean"][data-is-hover][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"])>* {
  --context-fill-color: rgba(var(--purple-04-color-rgb),0.1);
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-theme="ocean"][data-variant="waiting"]:not([data-variant="processing"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]) {
  background-color: rgba(var(--purple-04-color-rgb),0.1);
}

.c0.c0[data-theme="ocean"][data-variant="waiting"]:not([data-variant="processing"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"])>* {
  --context-fill-color: rgba(var(--purple-04-color-rgb),0.1);
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-is-hover]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-is-hover]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-is-hover][data-theme="pink"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-is-hover][data-theme="pink"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-is-hover][data-theme="pink"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="green"]):not([data-theme="purple"]) {
  background-color: rgba(var(--purple-04-color-rgb),0.1);
}

.c0.c0[data-is-hover][data-theme="pink"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="green"]):not([data-theme="purple"])>* {
  --context-fill-color: rgba(var(--purple-04-color-rgb),0.1);
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-is-hover][data-theme="green"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-is-hover][data-theme="green"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-is-hover][data-theme="green"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="purple"]) {
  background-color: rgba(var(--purple-04-color-rgb),0.1);
}

.c0.c0[data-is-hover][data-theme="green"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="purple"])>* {
  --context-fill-color: rgba(var(--purple-04-color-rgb),0.1);
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-is-hover][data-theme="purple"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-is-hover][data-theme="purple"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-is-hover][data-theme="purple"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]) {
  background-color: rgba(var(--purple-04-color-rgb),0.1);
}

.c0.c0[data-is-hover][data-theme="purple"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"])>* {
  --context-fill-color: rgba(var(--purple-04-color-rgb),0.1);
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-is-hover][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]) {
  background-color: rgba(var(--purple-04-color-rgb),0.1);
}

.c0.c0[data-is-hover][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"])>* {
  --context-fill-color: rgba(var(--purple-04-color-rgb),0.1);
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-theme="pink"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-theme="pink"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="green"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-theme="pink"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="green"]):not([data-theme="purple"]) {
  background-color: rgba(var(--purple-04-color-rgb),0.1);
}

.c0.c0[data-theme="pink"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="green"]):not([data-theme="purple"])>* {
  --context-fill-color: rgba(var(--purple-04-color-rgb),0.1);
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-theme="green"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="purple"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-theme="green"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="purple"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-theme="green"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="purple"]) {
  background-color: rgba(var(--purple-04-color-rgb),0.1);
}

.c0.c0[data-theme="green"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="purple"])>* {
  --context-fill-color: rgba(var(--purple-04-color-rgb),0.1);
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-theme="purple"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-variant="waiting"]) {
  background-color: var(--purple-04-color,rgba(0,0,0,1));
}

.c0.c0[data-theme="purple"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-variant="waiting"])>* {
  --context-fill-color: var(--purple-04-color,rgba(0,0,0,1));
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-theme="purple"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]) {
  background-color: rgba(var(--purple-04-color-rgb),0.1);
}

.c0.c0[data-theme="purple"][data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"])>* {
  --context-fill-color: rgba(var(--purple-04-color-rgb),0.1);
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0[data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"]) {
  background-color: rgba(var(--purple-04-color-rgb),0.1);
}

.c0.c0[data-variant="waiting"]:not([data-variant="processing"]):not([data-theme="ocean"]):not([data-is-hover]):not([data-theme="pink"]):not([data-theme="green"]):not([data-theme="purple"])>* {
  --context-fill-color: rgba(var(--purple-04-color-rgb),0.1);
  --context-fill-color-rgb: var(--purple-04-color-rgb);
}

.c0.c0:not([data-variant="waiting"]):not([data-theme="ocean"]):not([data-theme="pink]):not([data-theme="green"]):not([data-theme="purple"]) {
  border-top: 0 solid rgba(var(--purple-color-rgb), 0);
  border-right: 0 solid rgba(var(--purple-color-rgb), 0);
  border-bottom: 0 solid rgba(var(--purple-color-rgb), 0);
  border-left: 1px solid rgba(var(--purple-color-rgb), 0);
}

.c0.c0[data-variant="waiting"]:not([data-theme="ocean"]):not([data-theme="pink]):not([data-theme="green"]):not([data-theme="purple"]) {
  border-top: 0 solid rgba(var(--purple-color-rgb),0);
  border-right: 0 solid rgba(var(--purple-color-rgb),0);
  border-bottom: 0 solid rgba(var(--purple-color-rgb),0);
  border-left: 1px solid rgba(var(--purple-color-rgb),0);
}

<div>
  <div
    class="c0"
    data-qa="Component"
    data-theme="purple"
    data-variant="processing"
  />
</div>
`;

exports[`tasty() API should pass styles from tasty 1`] = `
.c0 {
  outline: none;
}

.c0[hidden] {
  display: none !important;
}

.c0.c0 {
  color: rgba(var(--clear-color-rgb),0.1);
  --current-color: var(--clear-color,clear);
  --current-color-rgb: var(--clear-color-rgb);
}

<div>
  <div
    class="c0"
  />
</div>
`;
